<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/back"
    tools:context="com.example.ihm.myapplication.OrderActivity">



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/callWaiter"
        android:id="@+id/buttonCallWaiter"
        android:textSize="20dp"
        android:onClick="callWaiter"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0.10"
        android:weightSum="1"
        android:id="@+id/linearLayout"
        android:gravity="right"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center">

            <ImageButton
                android:layout_width="133dp"
                android:src="@drawable/backarrow"
                android:background="@null"
                android:onClick="backToMain"
                android:layout_height="71dp"
                android:id="@+id/backButtonLogin"
                android:layout_gravity="right|center_vertical" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.44"
        android:weightSum="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/layoutOnglets">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Menus"
                android:onClick="switchCategory"
                android:id="@+id/buttonmenus"
                android:layout_marginTop="25dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Entrees"
                android:onClick="switchCategory"
                android:id="@+id/buttonentrees" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plat"
                android:onClick="switchCategory"
                android:id="@+id/buttonplats" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Desserts"
                android:onClick="switchCategory"
                android:id="@+id/buttondesserts" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boisson"
                android:onClick="switchCategory"
                android:id="@+id/buttonboissons" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favoris"
                android:id="@+id/buttonFavoris" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="461dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="428dp"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:layout_gravity="bottom">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carteDuResto"
                        android:id="@+id/textView7"
                        android:layout_gravity="center_horizontal"
                        android:textSize="25dp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/listViewMenu"
                            android:background="@drawable/border"
                            android:layout_weight="0.80" />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/command"
                        android:id="@+id/textView8"
                        android:textSize="25dp"
                        android:layout_gravity="center_horizontal" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ListView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/border"
                            android:id="@+id/listViewOrders" />
                    </FrameLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0.00€"
                    android:id="@+id/textViewPrix"
                    android:layout_gravity="left"
                    android:textSize="30dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/commander"
                    android:id="@+id/button3"
                    android:onClick="order"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
