<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/back"
    tools:context="com.example.ihm.myapplication.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="109dp"
            android:layout_weight="0.99"
            android:layout_gravity="center|top">

            <Button
                android:layout_width="318dp"
                android:layout_height="82dp"
                android:background="@drawable/borderbuttons"
                android:text="@string/colorblind"
                android:id="@+id/daltonienButton"
                android:layout_gravity="center"
                android:textSize="30dp" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="false"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_title"
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:textSize="55dp"
            android:gravity="center_vertical|bottom"
            android:textStyle="bold"
            android:paddingBottom="60dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border"
            android:weightSum="1"
            android:layout_weight="0.10"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/abonne"
                android:textSize="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.78"
                android:gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:gravity="center"
                android:weightSum="1">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/borderbuttons"
                    android:text="Oui"
                    android:onClick="login"
                    android:id="@+id/aboButton"
                    android:layout_weight="0.11"
                    android:textSize="20dp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.35" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/borderbuttons"
                    android:text="Non"
                    android:onClick="order"
                    android:id="@+id/nonaboButton"
                    android:layout_weight="0.11"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.44"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plusTextsize"
            android:id="@+id/button"
            android:layout_gravity="bottom"
            android:textSize="30dp" />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.88" />

        <ImageButton
            android:layout_width="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_height="85dp"
            android:id="@+id/imageButtonFR"
            android:layout_gravity="bottom"
            android:background="@null"
            android:src="@mipmap/frflag"
            android:onClick="switchFR"
            android:layout_weight="0.06" />

        <ImageButton
            android:layout_width="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_height="85dp"
            android:id="@+id/imageButtonUK"
            android:layout_gravity="bottom"
            android:background="@null"
            android:src="@mipmap/ukflag"
            android:onClick="switchEN"
            android:layout_weight="0.06" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    </LinearLayout>


</RelativeLayout>
