<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/back"
    tools:context="com.example.ihm.myapplication.LoginActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="109dp"
            android:layout_weight="0.99"
            android:layout_gravity="center|top">

            <ImageButton
                android:layout_width="133dp"
                android:src="@drawable/backarrow"
                android:background="@null"
                android:onClick="backToMain"
                android:layout_height="71dp"
                android:id="@+id/backButtonLogin"
                android:layout_gravity="right|center_vertical" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="306dp"
                    android:layout_height="match_parent"
                    android:text="@string/username"
                    android:id="@+id/textViewUsername"
                    android:textSize="30dp"
                    android:layout_gravity="center_horizontal" />
            </FrameLayout>

            <EditText
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextUsername" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="307dp"
                    android:layout_height="match_parent"
                    android:text="@string/password"
                    android:id="@+id/textViewPassword"
                    android:textSize="30dp" />
            </FrameLayout>

            <EditText
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editTextPassword"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <Button
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/buttonLogin"
            android:onClick="login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewErrLogin"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff0000"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.44"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


    </LinearLayout>

</RelativeLayout>
